--- a/contact.html
+++ b/contact.html
@@ -6,10 +6,10 @@
       </head>
       <body>
           <h3>Contact</h3>
-          <p>Name:Abdulkadir Çivioğlu</p>
-          <p>Surname:Çivioğlu</p>
-          <p>Number:0545 842 7158</p>
-          <p>Email:Wewilo1218@gmail.com</p>
+          <p>Name:Mukaso</p>
+          <p>Surname:Riakosan</p>
+          <p>Number:0545 787 4141</p>
+          <p>Email:Ringoringosiseler@gmail.com</p>
 
           <form method="POST" >
               <label for="myname">İsim</label>
